# mygame

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.sh
.github/workflows/: docker.yml  release.yml
docs/: CONTROLLER_SUPPORT.md  RETROWEB.md
frontend/: index.html  package-lock.json  package.json  test-emu.html  vite.config.ts
frontend/public/: manifest.webmanifest  player.html
frontend/src/: api.ts  controller-svg.ts  emulator.ts  gamepad-manager.ts  main.ts  styles.css
packaging/: README.txt  start.bat  start.sh
src/: main.rs
